--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 requests==2.27.1
 transformers==4.21.0
 torch==1.12.0
-beautifulsoup4==4.11.1
 tensorflow==2.9.1
+pyarrow==9.0.0
+datasets==2.4.0
+scikit-learn==1.1.2
